--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Xiaoyu Ding Final Project 
+        Xiaoyu Ding Final Project
     </title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -44,8 +44,6 @@
         </nav>
     </header>
 
-
-
     <!-- ***************Adding main part for the web page***************-->
     <main>
         <article>
@@ -56,9 +54,10 @@
                 </h1>
 
                 <p class="homep">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
-                    It defines the meaning and structure of web content. 
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                    (CSS)
                     or functionality/behavior (JavaScript).
                 </p>
 
@@ -73,9 +72,10 @@
                 <img class="sboutusimg" src="images/about-us.jpg" alt="about us image">
                 <h1 class="aboutush1">About Us</h1>
                 <p class="aboutusp">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
-                    It defines the meaning and structure of web content. 
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                    (CSS)
                     or functionality/behavior (JavaScript).
                 </p>
             </section>
@@ -89,7 +89,7 @@
                 <div class="digital">
                     <img class="digitalimg" src="images/digital.jpg" alt="digital image">
                     <h2>Digtal Transformation</h2>
-                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
@@ -102,7 +102,7 @@
                 <div class="marketing">
                     <img class="marketingimg" src="images/marketing.jpg" alt="marketing image">
                     <h2>Marketing</h2>
-                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
@@ -115,7 +115,7 @@
                 <div class="video">
                     <img class="videoimg" src="images/video.jpg" alt="video image">
                     <h2>Video Production</h2>
-                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
@@ -128,7 +128,7 @@
                 <div class="web">
                     <img class="webimg" src="images/web.jpg" alt="web image">
                     <h2>Web Development</h2>
-                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
@@ -141,7 +141,7 @@
                 <div class="print">
                     <img class="printimg" src="images/print.jpg" alt="print image">
                     <h2>Print</h2>
-                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
@@ -158,9 +158,10 @@
                 </h1>
 
                 <p class="visionp">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
-                    It defines the meaning and structure of web content. 
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                    (CSS)
                     or functionality/behavior (JavaScript).
                 </p>
 
@@ -179,8 +180,8 @@
                     <h2>John Doe</h2>
                     <h3>CEO and Co-owner</h3>
                     <hr>
-                    <p> 
-                        HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p>
+                        HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
                 </div>
@@ -191,8 +192,8 @@
                     <h2>Bob Rite</h2>
                     <h3>CFO and Co-owner</h3>
                     <hr>
-                    <p> 
-                        HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    <p>
+                        HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
                 </div>
@@ -201,23 +202,66 @@
             <!-- **********************Contact Us********************************************* -->
             <section class="connectus">
                 <div class="message">
-                    
+                    <h3>Send us a message</h3>
+                    <form class="box" action="Contact.html" method="get">
+                        <div>
+                            <label class="fullname" for="fullname">Full Name</label>
+                            <input class="nameinput" type="text" id="fullname" name="fullname">
+                        </div>
+
+                        <div>
+                            <label class="youremail" for="youremail">Email</label>
+                            <input class="emailinput" type="email" id="youremail" name="youremail" required>
+                        </div>
+
+                        <div>
+                            <label class="message" for="message">Message</label>
+                            <textarea class="textarea" name="message" id="message"></textarea>
+                        </div>
+
+                        <div class="sendbutton">
+                            <p>SEND</p>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="location">
-                    
-                </div>
+                    <h3>Location</h3>
 
+                </div>
             </section>
 
+            <!-- *********************Hours of operation*************************************** -->
+            <section class="hours">
+                <h3>Hours of operation</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">Days</th>
+                            <th rowspan="2">Hours</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Monday-Friday</td>
+                            <td>9 AM - 6 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday-Sunday</td>
+                            <td>Closed</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </article>
     </main>
 
     <!-- ***************Adding footer***************-->
     <footer>
-        <p>Copyright &copy; XiaoyuDing&apos;s information, 2021</p>
+        <p>Copyright &copy; Three Star Media, 2020</p>
+        <p>All images are taken from Unsplash</p>
     </footer>
-
 </body>
 
 </html>
