--- a/final-project/index.html
+++ b/final-project/index.html
@@ -46,10 +46,9 @@
 
     <!-- ***************Adding main part for the web page***************-->
     <main>
-        <article>
             <!-- Adding home section  -->
             <section class="home">
-                <h1 class="homeh1">
+                <h1>
                     Welcome to Three Star Media
                 </h1>
 
@@ -70,7 +69,7 @@
             <!-- About us -->
             <section class="aboutus">
                 <img class="sboutusimg" src="images/about-us.jpg" alt="about us image">
-                <h1 class="aboutush1">About Us</h1>
+                <h2>About Us</h2>
                 <p class="aboutusp">
                     HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
@@ -83,12 +82,12 @@
             <!--created our services section -->
             <section class="services">
 
-                <h1 class="servicesh1">Our Services</h1>
+                <h2>Our Services</h2>
 
                 <!-- *************digtal transformation *************-->
                 <div class="digital">
                     <img class="digitalimg" src="images/digital.jpg" alt="digital image">
-                    <h2>Digtal Transformation</h2>
+                    <h3>Digtal Transformation</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
@@ -101,7 +100,7 @@
                 <!-- *************Marketing******************* -->
                 <div class="marketing">
                     <img class="marketingimg" src="images/marketing.jpg" alt="marketing image">
-                    <h2>Marketing</h2>
+                    <h3>Marketing</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
@@ -114,7 +113,7 @@
                 <!-- ********************Video Production**************************** -->
                 <div class="video">
                     <img class="videoimg" src="images/video.jpg" alt="video image">
-                    <h2>Video Production</h2>
+                    <h3>Video Production</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
@@ -127,7 +126,7 @@
                 <!-- *********************Web Development*************************** -->
                 <div class="web">
                     <img class="webimg" src="images/web.jpg" alt="web image">
-                    <h2>Web Development</h2>
+                    <h3>Web Development</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
@@ -140,7 +139,7 @@
                 <!-- ***********************Print************************* -->
                 <div class="print">
                     <img class="printimg" src="images/print.jpg" alt="print image">
-                    <h2>Print</h2>
+                    <h3>Print</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
@@ -153,9 +152,7 @@
 
             <!-- ******************Our Vision****************************** -->
             <section class="vision">
-                <h1 class="visionh1">
-                    Our Vision
-                </h1>
+                <h2> Our Vision</h2>
 
                 <p class="visionp">
                     HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -173,12 +170,12 @@
 
             <!-- ********************our team********************************* -->
             <section class="team">
-                <h1>Our Team</h1>
+                <h2>Our Team</h2>
                 <!-- *************John Doe******************* -->
                 <div class="john">
                     <img class="johnimg" src="images/john.jpg" alt="john image">
-                    <h2>John Doe</h2>
-                    <h3>CEO and Co-owner</h3>
+                    <h3>John Doe</h3>
+                    <h4>CEO and Co-owner</h4>
                     <hr>
                     <p>
                         HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -189,8 +186,8 @@
                 <!-- *************Bob Rite******************* -->
                 <div class="bob">
                     <img class="bobimg" src="images/bob.jpg" alt="bob image">
-                    <h2>Bob Rite</h2>
-                    <h3>CFO and Co-owner</h3>
+                    <h3>Bob Rite</h3>
+                    <h4>CFO and Co-owner</h4>
                     <hr>
                     <p>
                         HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -201,6 +198,7 @@
 
             <!-- **********************Contact Us********************************************* -->
             <section class="connectus">
+                <h2>Contact Us</h2>
                 <div class="message">
                     <h3>Send us a message</h3>
                     <form class="box" action="Contact.html" method="get">
@@ -227,18 +225,18 @@
 
                 <div class="location">
                     <h3>Location</h3>
-
+                    <img class="mapimg" src="images/map.PNG" alt="map image">
                 </div>
             </section>
 
             <!-- *********************Hours of operation*************************************** -->
             <section class="hours">
-                <h3>Hours of operation</h3>
+                <h2>Hours of operation</h2>
                 <table>
                     <thead>
                         <tr>
-                            <th colspan="2">Days</th>
-                            <th rowspan="2">Hours</th>
+                            <th>Days</th>
+                            <th>Hours</th>
                         </tr>
                     </thead>
 
@@ -254,7 +252,6 @@
                     </tbody>
                 </table>
             </section>
-        </article>
     </main>
 
     <!-- ***************Adding footer***************-->
