--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,25 +17,25 @@
     <!-- Adding Header -->
     <header>
 
-        <img class="logoimg" src="images/logo.png" alt="logo image">
+        <img class="f-logoimg" src="images/logo.png" alt="logo image">
 
         <!-- create nav -->
         <nav>
             <ul>
                 <li>
-                    <a href="#home" class="home-link">Home</a>
+                    <a href="#home" class="f-home-link">Home</a>
                 </li>
                 <li>
-                    <a href="#aboutus" class="aboutus-link">About Us</a>
+                    <a href="#aboutus" class="f-aboutus-link">About Us</a>
                 </li>
                 <li>
-                    <a href="#services" class="services-link">Services</a>
+                    <a href="#services" class="f-services-link">Services</a>
                 </li>
                 <li>
-                    <a href="#team" class="team-link">Team</a>
+                    <a href="#team" class="f-team-link">Team</a>
                 </li>
                 <li>
-                    <a href="#connectus" class="connectus-link">Contact</a>
+                    <a href="#connectus" class="f-connectus-link">Contact</a>
                 </li>
                 <li>
                     <a href="contact.html">Search</a>
@@ -47,12 +47,12 @@
     <!-- ***************Adding main part for the web page***************-->
     <main>
             <!-- Adding home section  -->
-            <section class="home">
+            <section class="f-home">
                 <h1>
                     Welcome to Three Star Media
                 </h1>
 
-                <p class="homep">
+                <p class="f-homep">
                     HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
                     Other technologies besides HTML are generally used to describe a web page's appearance/presentation
@@ -60,17 +60,17 @@
                     or functionality/behavior (JavaScript).
                 </p>
 
-                <div class="connectbutton">
+                <div class="f-connectbutton">
                     <p>Connect with us</p>
                 </div>
                 <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
             </section>
 
             <!-- About us -->
-            <section class="aboutus">
-                <img class="sboutusimg" src="images/about-us.jpg" alt="about us image">
+            <section class="f-aboutus">
+                <img class="f-sboutusimg" src="images/about-us.jpg" alt="about us image">
                 <h2>About Us</h2>
-                <p class="aboutusp">
+                <p class="f-aboutusp">
                     HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
                     Other technologies besides HTML are generally used to describe a web page's appearance/presentation
@@ -80,81 +80,81 @@
             </section>
 
             <!--created our services section -->
-            <section class="services">
+            <section class="f-services">
 
                 <h2>Our Services</h2>
 
                 <!-- *************digtal transformation *************-->
-                <div class="digital">
-                    <img class="digitalimg" src="images/digital.jpg" alt="digital image">
+                <div class="f-digital">
+                    <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
                     <h3>Digtal Transformation</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="digitalbutton">
+                    <div class="f-digitalbutton">
                         <p>Digital Plans</p>
                     </div>
                 </div>
 
                 <!-- *************Marketing******************* -->
-                <div class="marketing">
-                    <img class="marketingimg" src="images/marketing.jpg" alt="marketing image">
+                <div class="f-marketing">
+                    <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
                     <h3>Marketing</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="marketingbutton">
+                    <div class="f-marketingbutton">
                         <p>Marketing Plans</p>
                     </div>
                 </div>
 
                 <!-- ********************Video Production**************************** -->
-                <div class="video">
-                    <img class="videoimg" src="images/video.jpg" alt="video image">
+                <div class="f-video">
+                    <img class="f-videoimg" src="images/video.jpg" alt="video image">
                     <h3>Video Production</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="videobutton">
+                    <div class="f-videobutton">
                         <p>Video Plans</p>
                     </div>
                 </div>
 
                 <!-- *********************Web Development*************************** -->
-                <div class="web">
-                    <img class="webimg" src="images/web.jpg" alt="web image">
+                <div class="f-web">
+                    <img class="f-webimg" src="images/web.jpg" alt="web image">
                     <h3>Web Development</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="webbutton">
+                    <div class="f-webbutton">
                         <p>Web Plans</p>
                     </div>
                 </div>
 
                 <!-- ***********************Print************************* -->
-                <div class="print">
-                    <img class="printimg" src="images/print.jpg" alt="print image">
+                <div class="f-print">
+                    <img class="f-printimg" src="images/print.jpg" alt="print image">
                     <h3>Print</h3>
                     <p> HTML (HyperText Markup Language) is the most basic building block of the Web.
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="printbutton">
+                    <div class="f-printbutton">
                         <p>Print Plans</p>
                     </div>
                 </div>
             </section>
 
             <!-- ******************Our Vision****************************** -->
-            <section class="vision">
+            <section class="f-vision">
                 <h2> Our Vision</h2>
 
-                <p class="visionp">
+                <p class="f-visionp">
                     HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
                     Other technologies besides HTML are generally used to describe a web page's appearance/presentation
@@ -162,18 +162,18 @@
                     or functionality/behavior (JavaScript).
                 </p>
 
-                <div class="learnmorebutton">
+                <div class="f-learnmorebutton">
                     <p>Learn More</p>
                 </div>
                 <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
             </section>
 
             <!-- ********************our team********************************* -->
-            <section class="team">
+            <section class="f-team">
                 <h2>Our Team</h2>
                 <!-- *************John Doe******************* -->
-                <div class="john">
-                    <img class="johnimg" src="images/john.jpg" alt="john image">
+                <div class="f-john">
+                    <img class="f-johnimg" src="images/john.jpg" alt="john image">
                     <h3>John Doe</h3>
                     <h4>CEO and Co-owner</h4>
                     <hr>
@@ -184,8 +184,8 @@
                 </div>
 
                 <!-- *************Bob Rite******************* -->
-                <div class="bob">
-                    <img class="bobimg" src="images/bob.jpg" alt="bob image">
+                <div class="f-bob">
+                    <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
                     <h3>Bob Rite</h3>
                     <h4>CFO and Co-owner</h4>
                     <hr>
@@ -197,11 +197,11 @@
             </section>
 
             <!-- **********************Contact Us********************************************* -->
-            <section class="connectus">
+            <section class="f-connectus">
                 <h2>Contact Us</h2>
-                <div class="message">
+                <div class="f-message">
                     <h3>Send us a message</h3>
-                    <form class="box" action="Contact.html" method="get">
+                    <form class="f-box" action="Contact.html" method="get">
                         <div>
                             <label class="fullname" for="fullname">Full Name</label>
                             <input class="nameinput" type="text" id="fullname" name="fullname">
@@ -223,14 +223,14 @@
                     </form>
                 </div>
 
-                <div class="location">
+                <div class="f-location">
                     <h3>Location</h3>
                     <img class="mapimg" src="images/map.PNG" alt="map image">
                 </div>
             </section>
 
             <!-- *********************Hours of operation*************************************** -->
-            <section class="hours">
+            <section class="f-hours">
                 <h2>Hours of operation</h2>
                 <table>
                     <thead>
