--- a/final-project/index.html
+++ b/final-project/index.html
@@ -19,8 +19,8 @@
     <header class="box header">
 
         <div class="f-logo">
-        <img class="f-logoimg" src="images/logo.png" alt="logo image">
-    </div>
+            <img class="f-logoimg" src="images/logo.png" alt="logo image">
+        </div>
         <!-- create nav -->
         <nav class="f-topnav">
             <ul>
@@ -39,203 +39,203 @@
                 <li>
                     <a href="#connectus" class="f-connectus-link">Contact</a>
                 </li>
-                <div class="f-search-container">
-                      <input type="text" placeholder="Search" name="search">
-                      <button type="submit"><i class="fa fa-search"></i></button>
-                  </div>
+                <li class="search-container">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </li>
             </ul>
         </nav>
     </header>
 
     <!-- ***************Adding main part for the web page***************-->
     <main class="f-main">
-            <!-- Adding home section  -->
-            <section class="box f-home">
-                <h1>
-                    Welcome to Three Star Media
-                </h1>
+        <!-- Adding home section  -->
+        <section class="box f-home">
+            <h1>
+                Welcome to Three Star Media
+            </h1>
 
-                <div class="backcolor"></div>
+            <div class="backcolor"></div>
 
-                <p class="f-homep">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+            <p class="f-homep">
+                HTML (HyperText Markup Language) is the most basic building block of the Web.
+                It defines the meaning and structure of web content.
+                Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                (CSS)
+                or functionality/behavior (JavaScript).
+            </p>
+
+            <div class="button f-connectbutton">
+                <p>Connect with us</p>
+            </div>
+            <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
+        </section>
+
+        <!-- About us -->
+        <section class="box f-aboutus">
+            <img class="f-sboutusimg" src="images/about-us.jpg" alt="about us image">
+            <h2>About Us</h2>
+            <p class="f-aboutusp">
+                HTML (HyperText Markup Language) is the most basic building block of the Web.
+                It defines the meaning and structure of web content.
+                Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                (CSS)
+                or functionality/behavior (JavaScript).
+            </p>
+            <p class="f-aboutusp2">
+                HTML (HyperText Markup Language) is the most basic building block of the Web.
+                It defines the meaning and structure of web content.
+                Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                (CSS)
+                or functionality/behavior (JavaScript).
+            </p>
+        </section>
+
+        <!--created our services section -->
+        <section class="box f-services">
+
+            <h2>Our Services</h2>
+
+            <!-- *************digtal transformation *************-->
+            <div class="f-digital">
+                <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
+                <h3>Digtal Transformation</h3>
+                <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
-                    (CSS)
-                    or functionality/behavior (JavaScript).
                 </p>
 
-                <div class="button f-connectbutton">
-                    <p>Connect with us</p>
+                <div class="f-digitalbutton">
+                    <p>Digital Plans</p>
                 </div>
-                <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
-            </section>
+            </div>
 
-            <!-- About us -->
-            <section class="box f-aboutus">
-                <img class="f-sboutusimg" src="images/about-us.jpg" alt="about us image">
-                <h2>About Us</h2>
-                <p class="f-aboutusp">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+            <!-- *************Marketing******************* -->
+            <div class="f-marketing">
+                <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
+                <h3>Marketing</h3>
+                <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
                     It defines the meaning and structure of web content.
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
-                    (CSS)
-                    or functionality/behavior (JavaScript).
-                </p>
-                <p class="f-aboutusp2">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
-                    (CSS)
-                    or functionality/behavior (JavaScript).
-                </p>
-            </section>
-
-            <!--created our services section -->
-            <section class="box f-services">
-
-                <h2>Our Services</h2>
-
-                <!-- *************digtal transformation *************-->
-                <div class="f-digital">
-                    <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
-                    <h3>Digtal Transformation</h3>
-                    <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
-
-                    <div class="f-digitalbutton">
-                        <p>Digital Plans</p>
-                    </div>
-                </div>
-
-                <!-- *************Marketing******************* -->
-                <div class="f-marketing">
-                    <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
-                    <h3>Marketing</h3>
-                    <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
-
-                    <div class="f-marketingbutton">
-                        <p>Marketing Plans</p>
-                    </div>
-                </div>
-
-                <!-- ********************Video Production**************************** -->
-                <div class="f-video">
-                    <img class="f-videoimg" src="images/video.jpg" alt="video image">
-                    <h3>Video Production</h3>
-                    <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
-
-                    <div class="f-videobutton">
-                        <p>Video Plans</p>
-                    </div>
-                </div>
-
-                <!-- *********************Web Development*************************** -->
-                <div class="f-web">
-                    <img class="f-webimg" src="images/web.jpg" alt="web image">
-                    <h3>Web Development</h3>
-                    <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
-
-                    <div class="f-webbutton">
-                        <p>Web Plans</p>
-                    </div>
-                </div>
-
-                <!-- ***********************Print************************* -->
-                <div class="f-print">
-                    <img class="f-printimg" src="images/print.jpg" alt="print image">
-                    <h3>Print</h3>
-                    <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
-
-                    <div class="f-printbutton">
-                        <p>Print Plans</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- ******************Our Vision****************************** -->
-            <section class="box f-vision">
-                <h2  class="vision-title"> Our Vision</h2>
-
-                <p class="f-visionp">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
-                    (CSS)
-                    or functionality/behavior (JavaScript).
                 </p>
 
-                <div class="f-learnmorebutton">
-                    <p>Learn More</p>
+                <div class="f-marketingbutton">
+                    <p>Marketing Plans</p>
                 </div>
-                <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
-            </section>
+            </div>
 
-            <!-- ********************our team********************************* -->
-            <section class="box f-team">
-                <h2>Our Team</h2>
-                <!-- *************John Doe******************* -->
-                <div class="f-john">
-                    <img class="f-johnimg" src="images/john.jpg" alt="john image">
-                    <h3>John Doe</h3>
-                    <h4>CEO and Co-owner</h4>
-                    <hr>
-                    <p class="john">
-                        HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
+            <!-- ********************Video Production**************************** -->
+            <div class="f-video">
+                <img class="f-videoimg" src="images/video.jpg" alt="video image">
+                <h3>Video Production</h3>
+                <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                </p>
+
+                <div class="f-videobutton">
+                    <p>Video Plans</p>
                 </div>
+            </div>
 
-                <!-- *************Bob Rite******************* -->
-                <div class="f-bob">
-                    <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
-                    <h3>Bob Rite</h3>
-                    <h4>CFO and Co-owner</h4>
-                    <hr>
-                    <p class="bob">
-                        HTML (HyperText Markup Language) is the most basic building block of the Web.
-                        It defines the meaning and structure of web content.
-                    </p>
+            <!-- *********************Web Development*************************** -->
+            <div class="f-web">
+                <img class="f-webimg" src="images/web.jpg" alt="web image">
+                <h3>Web Development</h3>
+                <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                </p>
+
+                <div class="f-webbutton">
+                    <p>Web Plans</p>
                 </div>
-            </section>
+            </div>
 
-            <!-- **********************Contact Us********************************************* -->
-            <section class="box f-connectus">
-                <h2>Contact Us</h2>
-                <div class="f-message">
-                    <h3>Send us a message</h3>
-                    <form class="f-box" action="Contact.html" method="get">
-                        <div>
-                            <label class="fullname" for="fullname">Full Name</label>
-                            <input class="nameinput" type="text" id="fullname" name="fullname">
-                        </div>
+            <!-- ***********************Print************************* -->
+            <div class="f-print">
+                <img class="f-printimg" src="images/print.jpg" alt="print image">
+                <h3>Print</h3>
+                <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                </p>
 
-                        <div>
-                            <label class="youremail" for="youremail">Email</label>
-                            <input class="emailinput" type="email" id="youremail" name="youremail" required>
-                        </div>
-
-                        <div>
-                            <label class="message" for="message">Message</label>
-                            <textarea class="textarea" name="message" id="message"></textarea>
-                        </div>
-
-                        <div class="sendbutton">
-                            <p class="send">Send</p>
-                        </div>
-                    </form>
+                <div class="f-printbutton">
+                    <p>Print Plans</p>
                 </div>
+            </div>
+        </section>
 
-                 <!-- *********************Hours of operation*************************************** -->
+        <!-- ******************Our Vision****************************** -->
+        <section class="box f-vision">
+            <h2 class="vision-title"> Our Vision</h2>
+
+            <p class="f-visionp">
+                HTML (HyperText Markup Language) is the most basic building block of the Web.
+                It defines the meaning and structure of web content.
+                Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                (CSS)
+                or functionality/behavior (JavaScript).
+            </p>
+
+            <div class="f-learnmorebutton">
+                <p>Learn More</p>
+            </div>
+            <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
+        </section>
+
+        <!-- ********************our team********************************* -->
+        <section class="box f-team">
+            <h2>Our Team</h2>
+            <!-- *************John Doe******************* -->
+            <div class="f-john">
+                <img class="f-johnimg" src="images/john.jpg" alt="john image">
+                <h3>John Doe</h3>
+                <h4>CEO and Co-owner</h4>
+                <hr>
+                <p class="john">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                </p>
+            </div>
+
+            <!-- *************Bob Rite******************* -->
+            <div class="f-bob">
+                <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
+                <h3>Bob Rite</h3>
+                <h4>CFO and Co-owner</h4>
+                <hr>
+                <p class="bob">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                </p>
+            </div>
+        </section>
+
+        <!-- **********************Contact Us********************************************* -->
+        <section class="box f-connectus">
+            <h2>Contact Us</h2>
+            <div class="f-message">
+                <h3>Send us a message</h3>
+                <form class="f-box" action="Contact.html" method="get">
+                    <div>
+                        <label class="fullname" for="fullname">Full Name</label>
+                        <input class="nameinput" type="text" id="fullname" name="fullname">
+                    </div>
+
+                    <div>
+                        <label class="youremail" for="youremail">Email</label>
+                        <input class="emailinput" type="email" id="youremail" name="youremail" required>
+                    </div>
+
+                    <div>
+                        <label class="message" for="message">Message</label>
+                        <textarea class="textarea" name="message" id="message"></textarea>
+                    </div>
+
+                    <div class="sendbutton">
+                        <p class="send">Send</p>
+                    </div>
+                </form>
+            </div>
+
+            <!-- *********************Hours of operation*************************************** -->
             <section class="box f-hours">
                 <h2>Hours of operation</h2>
                 <table>
@@ -259,13 +259,13 @@
                 </table>
             </section>
 
-                <div class="f-location">
-                    <h3>Location</h3>
-                    <img class="mapimg" src="images/map.PNG" alt="map image">
-                </div>
-            </section>
+            <div class="f-location">
+                <h3>Location</h3>
+                <img class="mapimg" src="images/map.PNG" alt="map image">
+            </div>
+        </section>
 
-           
+
     </main>
 
     <!-- ***************Adding footer***************-->
