--- a/final-project/index.html
+++ b/final-project/index.html
@@ -9,14 +9,13 @@
         Xiaoyu Ding Final Project
     </title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 </head>
 
 <!-- ***************Adding body part for the web page***************-->
 
 <body>
     <!-- Adding Header -->
-    <header class="box header">
+    <header class="f-header">
 
         <div class="f-logo">
             <img class="f-logoimg" src="images/logo.png" alt="logo image">
@@ -51,12 +50,11 @@
     <main class="f-main">
         <!-- Adding home section  -->
         <section class="box f-home">
+            <!-- <img class="f-banner" src="images/main-banner.jpg" alt="f-banner"> -->
+            <div class="backcolor"></div>
             <h1>
                 Welcome to Three Star Media
             </h1>
-
-            <div class="backcolor"></div>
-
             <p class="f-homep">
                 HTML (HyperText Markup Language) is the most basic building block of the Web.
                 It defines the meaning and structure of web content.
